--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Prerak Joshi</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Prerak Joshi!</h1>
-				<p>I'm best known as Markit EDM Consultant. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:wire2pk@gmail.com">email</a></li>
-        		<li><a href="https://github.com/prerak-joshi">github.com/prerak-joshi</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Prerak Joshi
+---
+<div class="blurb">
+	<h1>Hi there, I'm Prerak Joshi!</h1>
+	<p>I'm best known as Markit EDM Consultant. <a href="/about">Read more about my life...</a></p>
+</div><!-- /.blurb -->
